--- a/index.html
+++ b/index.html
@@ -2,77 +2,155 @@
 <html>
 
 <head>
-  <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
-  <link rel="stylesheet" type="text/css" href=".my-style.css">
-  <title>이은진의 자기소개</title>
+    <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="my_css2.css">
+    <title>Jessica Lee</title>
 </head>
 <div class="jumbotron jumbotron-fluid">
     <div class="container">
-      <h1 class="display-4"><h1 style="color:rgb(33, 27, 66)">
-          <strong>Welcome to Jessica's Page</strong></h1>
-      <p class="lead"><h3>
-          <a href="https://foster.uw.edu">Michael G. Foster Business School at the University of Washington</a>
-        </h2></p>
+        <h1 class="display-4">
+            <h1 style="color:rgb(237, 236, 240);text-align:center">
+                <strong>Welcome to Jessica's Page </strong>
+            </h1>
+            <p class="lead">
+                <h3 style="text-align:center">
+                    <a href style="color:rgb(237, 236, 240)"="https://foster.uw.edu">Michael G. Foster Business School at the University of Washington</a>
+                </h3>
+            </p>
     </div>
-  </div>
-<body style="text-align:center">
-  
-  <p>
-    <h3>
-      <ol style="text-align:left">
-        <strong>
-          <em>멋사를 지원한 동기:</em>
-        </strong>
-        <p>
+</div>
+<ul class="nav justify-content-end">
+    <li class="nav-item">
+        <a class="nav-link" href="#">Education</a>
+    </li>
+    <li class="nav-item">
+        <a class="nav-link" href="#">Experiences</a>
+    </li>
+    <li class="nav-item">
+        <a class="nav-link" href="#">Skills</a>
+    </li>
+    <li class="nav-item">
+        <a class="nav-link" href="#">Hobbies</a>
+    </li>
+</ul>
 
-        </p>
-        <li style="text-align:left"> 멋사를 통해 사회를 돕는 사이트를 만들기 위해서 입니다.</li>
-        <li style="text-align:left"> 멋사를 통해 간단한 코딩을 배우고 위해서 입니다. </li>
-        </li>
-      </ol>
-    </h3>
-  </p>
-  <p>
-    <h3>
-      <ol style="text-align:left">
-        <em><strong>멋사에 관한 아이디어:</strong></em>
-        <p>
+<body>
+    <div class="container">
 
-        </p>
-        <li style="text-align:left">모든 연령대가 보고 힘을 얻을 수 있는 사이트를 만들고 싶습니다.</li>
-        <li style="text-align:left">비지니스 클래스에 관련된 프로젝트들을 모을 수 있는 사이트를 만들고 싶습니다. </li>
-      </ol>
-    </h3>
+        <h2 style="text-align:center">
+            <strong>Education</strong>
+        </h2>
+        <div class="row">
+            <div class="col-12">
+                <div>
+                    <h4>MICHAEL G. FOSTER SCHOOL OF BUSINESS – University of Washington </h4>
+                    <p>Bachelor of Arts in Business Administration, Marketing and Information Systems</p>
+                </div>
+            </div>
+            <div class="col-12">
+                <div>
+                    <h4>Foster Microsoft Excel Credential </h4>
+                    <p>Completed a 5-module online course, confirming Microsoft Excel skills in a variety of topics including
+                        PivotTables, advanced chart types and mathematical functions (passed the course with a cumulative
+                        score of 94%)</p>
+                </div>
+            </div>
+        </div>
+        <h2 style="text-align:center">
+            <strong>Experiences</strong>
+        </h2>
+        <div class="row">
+            <div class="col-md-4">
+                <h4>Raymond James</h4>
+                <p>
+                    <em>Marketing Data Insights and Technology Intern </em>
+                </p>
+                <p>
+                    • Working closely with a team of Financial Advisors in various marketing capacities, including telephone prospecting calls,
+                    developing prospect lists, maintaining a contact database, and correspondence with prospects</p>
+                <p> • Experiencing the growth strategies of a financial advisory practice as well as getting exposure to information
+                    on financial markets and planning</p>
+                <p> • Participating in a diverse set of projects, including the observation and analysis of competitor firms,
+                    maintenance of a competitive intelligence library, database enrichment, data mining, and survey design
+                    and analysis.
+                </p>
+            </div>
+            <div class="col-md-4">
+                <h4>Seattle Travel and Tour </h4>
+                <p>
+                    <em>Business Manager</em>
+                </p>
+                <p>
+                    • Frequently engaged with potential customers by using customized touch points</p>
+                <p> • Expanded B2B clientele by forming relationships with a variety of retail stores in the Northwest, such
+                    as the Seattle Outlet Mall, to provide employee and consumer benefits</p>
+                <p> • Translated important documents from Korean to English and English to Korean</p>
 
-  </p>
-  <p>
-    <img src="https://upload.wikimedia.org/wikipedia/en/1/1c/Foster_School_of_Business_logo.png">
-  </p>
+                </p>
+            </div>
+            <div class="col-md-4">
+                <h4>Senior Center in Seattle</h4>
+                <p>
+                    <em>Outreach Executive Intern </em>
+                </p>
+                <p>
+                    • Skilled at persuading audiences by inviting weekly speakers from a variety of organizations such as the NAACP, League of
+                    Women Voters, Urban League, ACLU, and presenting weekly PowerPoint presentations; thus successfully persuaded
+                    86 elders to register to vote </p>
+                <p> • Researched and analyzed provided information by presenting about parties, initiatives, candidates, voting
+                    requirements, democracy, etc. and by making weekly handouts, table tents, and PowerPoint presentations</p>
 
-  <p>
-    <H2 style="text-align:center">
-      <table border="1">
-        <thead>
-          <tr>
-            <th colspan="2">Group Members</th>
-          </tr>
-          <tr>
-            <th>Name</th>
-            <th>Major</th>
-          </tr>
-        </thead>
-        <tr>
-          <td>최재윤</td>
-          <td>Communication</td>
-        </tr>
-        <tr>
-          <td>김주희</td>
-          <td>Education</td>
-        </tr>
-      </table>
-  </p>
-  </H2>
-  
+                </p>
+            </div>
+        </div>
+        <h2 style="text-align:center">
+            <strong>Skills</strong>
+        </h2>
+        <div class="row">
+            <div class="col-md-3">
+                <h4>Language</h4>
+                <p>
+                    Native proficiency in Korean and English, limited working proficiency in Chinese
+                </p>
+            </div>
+            <div class="col-md-3">
+                <h4>Computer</h4>
+                <p>
+                    Proficient in Microsoft Office Suite, Business Research Functions
+                </p>
+            </div>
+            <div class="col-md-3">
+                <h4>Organization</h4>
+                <p>
+                    American Marketing Association
+                </p>
+            </div>
+            <div class="col-md-3">
+                <h4>Awards</h4>
+                <p>
+                    Special Judge’s Prize for Amazon Catalyst Challenge, Education Achievement Scholarships
+                </p>
+                </p>
+            </div>
+        </div>
+        <h2 style="text-align:center">
+                <strong>Hobbies</strong>
+                <p>
+                <button type="button" class="btn btn-outline-primary">Hiking</button>
+                <button type="button" class="btn btn-outline-secondary">Making Ads</button>
+                <button type="button" class="btn btn-outline-success">Adventure</button>
+                <button type="button" class="btn btn-outline-danger">Playing Flute</button>
+                <button type="button" class="btn btn-outline-warning">Fast Walking</button>
+                <button type="button" class="btn btn-outline-info">Taking Pictures</button>
+                <button type="button" class="btn btn-outline-primary">Enjoying the Scenery</button>
+                <button type="button" class="btn btn-outline-dark">Worshipping</button>
+                <button type="button" class="btn btn-outline-primary">Studing</button>
+                <button type="button" class="btn btn-outline-secondary">Reading Books</button>
+                <button type="button" class="btn btn-outline-success">Writing Journals</button>
+                <button type="button" class="btn btn-outline-danger">Meeting with Strangers</button>
+                <button type="button" class="btn btn-outline-warning">Cherry Picking</button>
+                <button type="button" class="btn btn-outline-info">Volunteering at Animal Shelter</button>
+                <button type="button" class="btn btn-outline-primary">Talking to Elderly</button>
+                <button type="button" class="btn btn-outline-dark">Learning Code</button>
+            </p>
 </body>
-
-</html>
